<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/parent"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_bar_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_bottom"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/today_parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.26"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/today_imageview"
                android:layout_width="@dimen/margin_25"
                android:layout_height="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@mipmap/todays_selected"/>

            <com.reformluach.typeface.CustomtextViewFontMedium
                android:id="@+id/today_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_4"
                android:background="@android:color/transparent"
                android:text="@string/todays"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/margin_9"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/events_parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.26"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/events_imageview"
                android:layout_width="@dimen/margin_25"
                android:layout_height="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@mipmap/event_unselected"/>

            <com.reformluach.typeface.CustomtextViewFontMedium
                android:id="@+id/events_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_4"
                android:background="@android:color/transparent"
                android:text="@string/events"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/margin_9"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calander_sync_parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.11"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/calander_sync_imageview"
                android:layout_width="@dimen/margin_25"
                android:layout_height="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@mipmap/calsync_unselected"/>

            <com.reformluach.typeface.CustomtextViewFontMedium
                android:id="@+id/calander_sync_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_4"
                android:background="@android:color/transparent"
                android:text="@string/calender_sync"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/margin_9"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_converter_parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.11"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/date_converter_imageview"
                android:layout_width="@dimen/margin_25"
                android:layout_height="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@mipmap/datecon_unselected"/>

            <com.reformluach.typeface.CustomtextViewFontMedium
                android:id="@+id/date_converter_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_4"
                android:background="@android:color/transparent"
                android:text="@string/date_converter"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/margin_9"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.26"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/about_imageview"
                android:layout_width="@dimen/margin_25"
                android:layout_height="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@mipmap/about_unselected"/>

            <com.reformluach.typeface.CustomtextViewFontMedium
                android:id="@+id/about_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_4"
                android:background="@android:color/transparent"
                android:text="@string/about"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/margin_9"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>